test/asm/interpolation-after-string.err
error: interpolation-after-string.asm(5):
    syntax error, unexpected symbol
while expanding symbol "hello"
error: interpolation-after-string.asm(8):
    Interpolated symbol "goodbye" does not exist
error: interpolation-after-string.asm(8):
    syntax error, unexpected string
Assembly aborted with 3 errors!
